--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,12 @@ rawpy>=0.23.1
 pyinstaller==6.12.0
 tkinter-tooltip==3.1.2
 
+torch>=2.0.1,<3.0.0
+transformers>=4.36.2
+torchvision>=0.15.2
+einops>=0.7.0
+safetensors>=0.4.1
+
 --extra-index-url https://download.pytorch.org/whl/cpu
 torch==2.6.0+cpu; sys_platform == 'linux'
 
